webhook-refined/kube-objects/webhook-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webhook-test
  labels:
    name: webhook-test
