webhook-refined/kube-objects/webhook-pod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: validating-webhook
  namespace: webhook-test
  labels:
    app: validating-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: validating-webhook
  template:
    metadata:
      labels:
        app: validating-webhook
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1234
      containers:
      - name: server
        image: tomras/validating-webhook-refined
        imagePullPolicy: Always
        ports:
        - containerPort: 3080
          name: webhook-port
        volumeMounts:
        - name: webhook-tls-certs
          mountPath: /run/secrets/tls
          readOnly: true
      volumes:
      - name: webhook-tls-certs
        secret:
          secretName: webhook-server-tls
