webhook-refined/kube-objects/webhook-configuration-mutating.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: demo-webhook-mutating
webhooks:
  - name: webhook-mutating.webhook-test.svc
    matchPolicy: Equivalent
    reinvocationPolicy: IfNeeded # Call webhook again if object is mutated
    sideEffects: None
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: webhook-validating
        namespace: webhook-test
        path: "/mutate-pods"
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQrVENDQXVHZ0F3SUJBZ0lVRWx6cWZmVXpiQ1FEMGZTTlhmQ2JsSGZ6Yndjd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2N6RUxNQWtHQTFVRUJoTUNRVlV4RXpBUkJnTlZCQWdNQ2xOdmJXVXRVM1JoZEdVeElUQWZCZ05WQkFvTQpHRWx1ZEdWeWJtVjBJRmRwWkdkcGRITWdVSFI1SUV4MFpERXNNQ29HQTFVRUF3d2pkMlZpYUc5dmF5MTJZV3hwClpHRjBhVzVuTG5kbFltaHZiMnN0ZEdWemRDNXpkbU13SGhjTk1qTXdOREF6TVRNME5UQTVXaGNOTWpRd05EQXkKTVRNME5UQTVXakJ6TVFzd0NRWURWUVFHRXdKQlZURVRNQkVHQTFVRUNBd0tVMjl0WlMxVGRHRjBaVEVoTUI4RwpBMVVFQ2d3WVNX [...]
    rules:
      - operations: [ "CREATE", "UPDATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "Namespaced"
